--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ telegram_username: # your Telegram user name
 scholar_userid: qO9HtIIAAAAJ # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
-orcid_id: # your ORCID ID
+orcid_id: 0000-0002-2579-4914 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
@@ -277,7 +277,7 @@ scholar:
   last_name: [Shinohara]
   first_name: [Takumi]
 
-  style: apa
+  style: ieee
   locale: en
 
   source: /_bibliography/
