--- a/_config.yml
+++ b/_config.yml
@@ -277,7 +277,7 @@ scholar:
   last_name: [Shinohara]
   first_name: [Takumi]
 
-  style: simple-ieee
+  style: ieee
   locale: en
 
   source: /_bibliography/
