--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Takumi
 middle_name:
 last_name: Shinohara
-email: takumis@nl.sd.keio.ac.jp #
+email: ye.5.takt.s@gmail.com #
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Ph.D. student at Keio University 
 footer_text: >
