--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,43 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Takumi Shinohara
     - name: Date of Birth
-      value: 14th March 1879
+      value: 22nd September 1993
     - name: Languages
-      value: English, German
+      value: Japanese, English
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Ph.D. in Engineering
+      institution: Keio University, Tokyo, Japan
+      year: 1993
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Thesis Title: Secure state estimation under sensor attacks
+        - Advisor: Prof. Toru Namerikawa
+    - title: Master in Engineering 
+      institution: Keio University, Tokyo, Japan
+      year: 2018
       description:
-        - Description 1.
-        - Description 2.
+        - Thesis Title: Zero-stealthy attacks in cyber-physical systems and secure state estimation in adversarial environments
+        - Advisor: Prof. Toru Namerikawa
 
-- title: Experience
+- title: Employment
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Consultant
+      institution: Consultant, Mitsubishi Research Institute, Inc., Tokyo, Japan
+      year: 2018
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Research, study, and consult on the cybersecurity policy for the Japanese Government (e.g., METI, MIC, and NISC) and consult private companies with cybersecurity issues.
+    - title: Visiting Researcher
+      institution: Keio University, Tokyo, Japan
+      year: 2024
       description:
-        - Description 1.
-        - Description 2.
+        - Academic research on secure control systems.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
+- title: Review Activities
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - IEEE Transactions on Automatic Control, Automatica, and control conference.
