--- a/_config.yml
+++ b/_config.yml
@@ -281,7 +281,7 @@ scholar:
   locale: en
 
   source: /_bibliography/
-  bibliography: publications_journal.bib, publications_conference.bib
+  bibliography: papers.bib, publications_journal.bib, publications_conference.bib
   bibliography_template: bib
   # Note: if you have latex math in your bibtex, the latex filter
   # preprocessing may conflict with MathJAX if the latter is enabled.
